# MissenseImpact-FYP

./: README.md  main.py  pyproject.toml
.githooks/: pre-commit
.github/: CODEOWNERS  labeler.yml
.github/ISSUE_TEMPLATE/: config.yml  phase1_milestone.md  phase2_milestone.md
.github/workflows/: ci.yml  labeler.yml  phase-milestone-automation.yml  project-automation.yml
configs/: base.yaml
data/: dataset.py  mutation_rates.py  pipeline.py  post_vep.py  splits.py
docs/FYP-1/: FYP-1 Proposal.docx
evaluation/: benchmark.py  bias_report.py  metrics.py  reporter.py  threshold_calibration.py
model/: backbone.py  esm_missense.py  fusion.py  head.py
notebooks/data-preprocessing/Bilal/: MissenseImpact_dataset_creation.ipynb  process_data_1000genome_session_1.ipynb  process_data_1000genome_session_2.ipynb  process_data_1000genome_session_3.ipynb  process_data_gnomad_session_1.ipynb  process_data_gnomad_session_2.ipynb  process_data_gnomad_session_3.ipynb  process_data_gnomad_session_4.ipynb  process_data_gnomad_session_5.ipynb  process_data_gnomad_session_6.ipynb  process_data_indigen.ipynb  process_data_sg10k_session_1.ipynb  process_data_sg10k_session_2.ipynb  process_data_sg10k_session_3.ipynb  process_data_sg10k_session_4.ipynb  process_data_sg10k_session_5.ipynb  process_data_sg10k_session_6.ipynb
notebooks/data-preprocessing/Mustafa/: 1k_gen_chr1.ipynb  1k_gen_chr2.ipynb  1k_gen_chr3.ipynb  Copy of Clinvar_Final_Processing.ipynb  Extracting_Indians_SG10K.ipynb  Filtering_SAS_chr1.ipynb  Filtering_SAS_chr15.ipynb  Filtering_SAS_chr16.ipynb  (+43 more)
scripts/: build_training_data.py  combine_and_split.py  evaluate.py  generate_proxies.py  predict.py  train.py  train_ensemble.py
tests/: test_benchmark.py  test_bias_report.py  test_ci_placeholder.py  test_dataset.py  test_loss.py  test_metrics.py  test_pipeline.py  test_pipeline_scripts.py  test_post_vep.py  test_reporter.py  test_splits.py  test_threshold_calibration.py  test_threshold_learner.py  test_trainer_checkpoint.py  test_trainer_utils.py
training/: loss.py  trainer.py
tuning/: optuna_tuner.py
