[project]
name = "missenseimpact-fyp"
version = "0.1.0"
description = "Population-aware missense variant effect prediction for South Asian cohorts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "cyvcf2>=0.30.0",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "requests>=2.28.0",
    "optuna>=3.3.0",
    "matplotlib>=3.7.0",
    "omegaconf>=2.3.0",
    "tqdm>=4.65.0",
    "biopython>=1.79",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=6.0.0",
    "flake8-bugbear",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = ["src/", ".venv/", "build/"]
