[project]
name = "missenseimpact-fyp"
version = "0.1.0"
description = "Population-aware missense variant effect prediction for South Asian cohorts"
readme = "README.md"
authors = [
    {name = "Bilal Asif Burney", email = "bilalburney14@gmail.com"},
    {name = "Mustafa Waqar", email = "mustafa.waqar02@gmail.com"},
    {name = "Sami-Ur-Rehman", email = ""}
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "cyvcf2>=0.30.0",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "requests>=2.28.0",
    "optuna>=3.3.0",
    "matplotlib>=3.7.0",
    "omegaconf>=2.3.0",
    "tqdm>=4.65.0",
    "biopython>=1.79",
    "pytest>=9.0.3",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "flake8>=6.0.0",
]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503", "E722"]
exclude = ["src/", ".venv/", "build/"]

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "model*", "training*", "evaluation*", "tuning*", "scripts*"]
